--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div id="d">
             <h1 id="color">I am</h1>
             <h1 class="c">Mohit vinaakar</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo aliquid modi dicta ipsum in asperiores error veniam sequi repellendus pariatur!</p>
+            <p>Hi, I’m Mohit Vinaakar — a passionate web and app developer who loves building clean and functional digital experiences.
+I’m constantly learning, improving my skills, and turning ideas into real, working projects.</p>
             <!--<button id="button" class="e">About Our Agency</button>--><button id="button1">content</button><a href="https://www.instagram.com/mohit_vinaakar__v?utm_source=qr&igsh=a3Z3OGwwZWhucHJv"><img src="58e433c8-b618-42c1-b0ed-f8034b65297c.png" alt="" class="z"></a><a href="https://www.linkedin.com/in/mohit-vinaakar-v-4490aa292?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="b3a441f0-c7be-4689-a86a-1c7ae39836cb.png" alt="" class="y"></a>
         </div>
         <div id="shape1">
@@ -60,8 +61,8 @@
                     <center><h3>CSS</h3></center>
                 </div>
             </div>
-            <p>These are the skills I currently have, and I am continuously working on them to improve and master each one. I believe in consistent learning and hands-on practice, which is why I spend time building real-world projects, exploring new technologies, and refining my problem-solving abilities.
-            My goal is not just to know how these tools work, but to understand them deeply and use them effectively to build impactful, efficient, and user-friendly applications. I enjoy the challenge of debugging, optimizing performance, and bringing creative ideas to life through code.</p>
+            <p class="p1">These are the skills I currently have, and I am continuously working on them to improve and master each one. I believe in consistent learning and hands-on practice, which is why I spend time building real-world projects, exploring new technologies, and refining my problem-solving abilities. My goal is not just to know how these tools work, but to understand them deeply and use them effectively to build impactful, efficient, and user-friendly applications. I enjoy the challenge of debugging, optimizing performance, and bringing creative ideas to life through code.</p>
+            <p class="p2">I'm always eager to step out of my comfort zone, take on new challenges, and learn from every experience. Whether it's working on a team project or experimenting with something new on my own, I give it my full effort and attention. I believe that growth comes through consistency, curiosity, and a willingness to keep pushing forward.</p>
         </div>
         <div class="education">
             <center><h1 id="ac">EDUCATION</h1></center>
@@ -72,20 +73,26 @@
             </div>
             <div class="collage">
                 <h3>COLLAGE:</h3>
+                <div class="collective">
+                    <p class="ad">I am currently pursuing my B.Tech in Computer Science and Engineering from the prestigious Indian Institute of Information Technology, Design and Manufacturing, Kurnool. My journey here has been filled with learning, challenges, and growth.</p>
+                    <p class="ae">Throughout my academic career, I have maintained a strong focus on computer science fundamentals, software development, and problem-solving. I have been actively involved in various projects that have allowed me to apply theoretical knowledge to practical scenarios.</p>
+                    <p class="af">My education has not only equipped me with technical skills but also fostered a mindset of innovation and continuous improvement. I am excited about the future and look forward to leveraging my education to make meaningful contributions in the field of technology.</p>
+                </div>
                 <p class="ad">I am currently pursuing my B.Tech in Computer Science and Engineering from the prestigious Indian Institute of Information Technology, Design and Manufacturing, Kurnool. My journey here has been filled with learning, challenges, and growth.</p>
                 <p class="ae">Throughout my academic career, I have maintained a strong focus on computer science fundamentals, software development, and problem-solving. I have been actively involved in various projects that have allowed me to apply theoretical knowledge to practical scenarios.</p>
                 <p class="af">My education has not only equipped me with technical skills but also fostered a mindset of innovation and continuous improvement. I am excited about the future and look forward to leveraging my education to make meaningful contributions in the field of technology.</p>
                 <img src="OIP (4).webp" alt="">
             </div>
+            <div style="height: 200px;"></div>
         </div>
         <div class="about">
             <h1>ABOUT:</h1>
             <h2></h2>
-            <h4>CONTACT:+916369810116</h4>
+            <h4><b>CONTACT:</b> +916369810116</h4>
             <h2></h2>
-            <h4>EMAIL: vsmkmo03062006@gmail.com</h4>
+            <h4><b>EMAIL:</b> vsmkmo03062006@gmail.com</h4>
             <h2></h2>
-            <h4>LINKEDIN:mohit vinaakar v</h4>
+            <h4><b>LINKEDIN:</b> mohit vinaakar v</h4>
         </div>
     </body>
 </html>
