--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="c">Mohit vinaakar</h1>
             <p>Hi, I’m Mohit Vinaakar — a passionate web and app developer who loves building clean and functional digital experiences.
 I’m constantly learning, improving my skills, and turning ideas into real, working projects.</p>
-            <a href="Resume (11).pdf"><button id="button1">content</button></a><a href="https://www.instagram.com/mohit_vinaakar__v?utm_source=qr&igsh=a3Z3OGwwZWhucHJv"><img src="58e433c8-b618-42c1-b0ed-f8034b65297c.png" alt="" class="z"></a><a href="https://www.linkedin.com/in/mohit-vinaakar-v-4490aa292?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="b3a441f0-c7be-4689-a86a-1c7ae39836cb.png" alt="" class="y"></a>
+            <a href="Resume (11)_page-0001.jpg"><button id="button1">content</button></a><a href="https://www.instagram.com/mohit_vinaakar__v?utm_source=qr&igsh=a3Z3OGwwZWhucHJv"><img src="58e433c8-b618-42c1-b0ed-f8034b65297c.png" alt="" class="z"></a><a href="https://www.linkedin.com/in/mohit-vinaakar-v-4490aa292?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="b3a441f0-c7be-4689-a86a-1c7ae39836cb.png" alt="" class="y"></a>
         </div>
         <div id="shape1">
             <img src="WhatsApp Image 2025-06-21 at 18.50.46_d47ea301.jpg" alt="">
