--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ I’m constantly learning, improving my skills, and turning ideas into real, wor
                 <img src="download.webp" alt="">
             </div>
             <div class="collage">
-                <h3>COLLAGE:</h3>
+                <h3>COLLEGE:</h3>
                 <div class="collective">
                     <p class="ad">I am currently pursuing my B.Tech in Computer Science and Engineering from the prestigious Indian Institute of Information Technology, Design and Manufacturing, Kurnool. My journey here has been filled with learning, challenges, and growth.</p>
                     <p class="ae">Throughout my academic career, I have maintained a strong focus on computer science fundamentals, software development, and problem-solving. I have been actively involved in various projects that have allowed me to apply theoretical knowledge to practical scenarios.</p>
@@ -96,3 +96,4 @@ I’m constantly learning, improving my skills, and turning ideas into real, wor
         </div>
     </body>
 </html>
+
