--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ I’m constantly learning, improving my skills, and turning ideas into real, wor
                 <p>I completed my higher secondary education in 2022 from Sri Sakthi Vinayagar Matric Higher Secondary School, where I built a strong academic foundation and developed an early interest in technology and programming.</p>
                 <img src="download.webp" alt="">
             </div>
-            <div class="collage">
+            <div class="college">
                 <h3>COLLEGE:</h3>
                 <div class="collective">
                     <p class="ad">I am currently pursuing my B.Tech in Computer Science and Engineering from the prestigious Indian Institute of Information Technology, Design and Manufacturing, Kurnool. My journey here has been filled with learning, challenges, and growth.</p>
@@ -96,4 +96,5 @@ I’m constantly learning, improving my skills, and turning ideas into real, wor
         </div>
     </body>
 </html>
+
 
